[package]
name = "geyser_agent_feed_plugin"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
redis = { version = "0.25.0", features = ["tokio-comp", "connection-manager"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
log = "0.4"

agave-geyser-plugin-interface = "=2.0.26"
solana-account-decoder = "=2.0.26"
solana-logger = "=2.0.26"
#solana-sdk = "=2.0.26"
#solana-storage-proto = "=2.0.26"
#solana-transaction-status = "=2.0.26"
solana-zk-token-sdk           = "=2.0.26"
solana-program = "=2.0.26"

#solana-metrics = "=2.0.26"
#solana-program-runtime = "=2.0.26"

###############################################################################
# Redirect every Solana crate to Tachyon’s dyn_fees_v2 branch (v2.0.26)       #
###############################################################################
[patch.crates-io]
#solana-sdk                    = { git = "https://github.com/x1-labs/tachyon", branch = "dyn_fees_v2", package = "solana-sdk" }
solana-program                = { git = "https://github.com/x1-labs/tachyon", branch = "dyn_fees_v2", package = "solana-program" }
solana-logger                 = { git = "https://github.com/x1-labs/tachyon", branch = "dyn_fees_v2", package = "solana-logger" }
#solana-program-runtime        = { git = "https://github.com/x1-labs/tachyon", branch = "dyn_fees_v2", package = "solana-program-runtime" }
solana-account-decoder        = { git = "https://github.com/x1-labs/tachyon", branch = "dyn_fees_v2", package = "solana-account-decoder" }
#solana-transaction-status     = { git = "https://github.com/x1-labs/tachyon", branch = "dyn_fees_v2", package = "solana-transaction-status" }
#solana-storage-proto          = { git = "https://github.com/x1-labs/tachyon", branch = "dyn_fees_v2", package = "solana-storage-proto" }
#solana-metrics                = { git = "https://github.com/x1-labs/tachyon", branch = "dyn_fees_v2", package = "solana-metrics" }
agave-geyser-plugin-interface = { git = "https://github.com/x1-labs/tachyon", branch = "dyn_fees_v2", package = "agave-geyser-plugin-interface" }
solana-zk-token-sdk     = { git = "https://github.com/x1-labs/tachyon", branch = "dyn_fees_v2", package = "solana-zk-token-sdk" }
# upstream hot-fixes
#curve25519-dalek = { git = "https://github.com/anza-xyz/curve25519-dalek.git", rev = "b500cdc2a920cd5bff9e2dd974d7b97349d61464" }
#tokio            = { git = "https://github.com/anza-xyz/solana-tokio.git",     rev = "7cf47705faacf7bf0e43e4131a5377b3291fce21" }